cmake_minimum_required(VERSION 3.10)
project(StopWait)



SET(CMAKE_C_COMPTLER GCC)
set(CMAKE_CXX FLAGS -fexec-charset=GBK)
add_definitions(-std=c++11)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
aux_source_directory(${PROJECT_SOURCE_DIR}/src/StopWait SRC_LIST_WAITSTOP)
aux_source_directory(${PROJECT_SOURCE_DIR}/src/GBN SRC_LIST_GBN)
aux_source_directory(${PROJECT_SOURCE_DIR}/src/SR SRC_LIST_SR)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
ADD_EXECUTABLE(stop_wait ${SRC_LIST_WAITSTOP})
ADD_EXECUTABLE(gbn ${SRC_LIST_GBN})
ADD_EXECUTABLE(sr ${SRC_LIST_SR})
FIND_LIBRARY(NETSIM_LIB libnetsim.a ${PROJECT_SOURCE_DIR}/lib)
TARGET_LINK_LIBRARIES(stop_wait  ${NETSIM_LIB})
TARGET_LINK_LIBRARIES(gbn  ${NETSIM_LIB})
TARGET_LINK_LIBRARIES(sr  ${NETSIM_LIB})